--- a/navigation-application/projects/navapp/src/styles/_variables.scss
+++ b/navigation-application/projects/navapp/src/styles/_variables.scss
@@ -43,6 +43,7 @@ $menu-collapsed-width:        56px;
 $menu-width:                  224px;
 $menu-drawer-width:           200px;
 $menu-root-item-height:       46px;
+$menu-icon-size:              24px;
 
 $menu-sub-menu-font-size:     14px;
 $menu-sub-sub-menu-font-size: 12px;
